--- a/spring-ajax-banking-location/src/main/webapp/WEB-INF/views/customer/modalTransfer.html
+++ b/spring-ajax-banking-location/src/main/webapp/WEB-INF/views/customer/modalTransfer.html
@@ -37,8 +37,7 @@
                             </div>
                             <div class="col-lg-3">
                                 <label class="fw-bold">Transfer amount</label>
-                                <input type="text" id="transferAmount" name="transferAmount" class="form-control"
-                                       onchange="handleTotalAmountTransaction(this)" >
+                                <input type="text" id="transferAmount" name="transferAmount" class="form-control" >
                                 <div id="transfer-error" style="color: red;" ></div>
                             </div>
                             <div class="col-lg-3">
