--- a/spb-ajax-banking-location/src/main/resources/templates/customer/list.html
+++ b/spb-ajax-banking-location/src/main/resources/templates/customer/list.html
@@ -17,7 +17,11 @@
             <h1>List of customer </h1>
         </div>
         <div class="col-lg-6 header-right-button">
-            <a href="#">
+            <button class="btn btn-outline-light">
+                <i class="fas fa-user"></i>
+                <span th:text="${username} + ' - ' + ${role}"></span>
+            </button>
+            <a href="histories/transfer">
                 <button class="btn btn-outline-light">
                     <i class="fas fa-history"></i>
                     Transfer histories
@@ -27,6 +31,12 @@
                 <i class="fas fa-user-plus"></i>
                 Add new customer
             </button>
+            <a href="/logout">
+                <button class="btn btn-outline-light">
+                    <i class="fas fa-arrow-alt-circle-right"></i>
+                    Logout
+                </button>
+            </a>
         </div>
     </header>
 
@@ -210,6 +220,13 @@
         `;
     }
     page.commands.renderFooter = (customerId) => {
+        const roleCode = '[[${role}]]'
+
+        const btnDeleteStr = `
+                <button  class="btn btn-danger delete" data-id="${customerId}">
+                            <i class="fas fa-ban" ></i> Suspend
+                    </button>
+            `;
         return `
                 <div class="container">
                     <button  class="btn btn-secondary edit" data-id="${customerId}" >
@@ -224,9 +241,7 @@
                     <button  class="btn btn-primary transfer" data-id="${customerId}">
                             <i class="fas fa-exchange-alt" ></i> Transfer
                     </button>
-                    <button  class="btn btn-danger delete" data-id="${customerId}">
-                            <i class="fas fa-ban" ></i> Suspend
-                    </button>
+                     ${roleCode === 'ADMIN' ? btnDeleteStr : '' }
                 </div>
         `;
     }
@@ -419,6 +434,16 @@
                     .done(() => {
                         $('#tr_' + customerId).remove();
                         App.showSuccessAlert('Xoá thành công');
+                    })
+                    .fail((jqXHR) => {
+                        console.log(jqXHR);
+                        const httpStatus = jqXHR.status;
+                        if (httpStatus === 403) {
+                            App.showErrorAlert('Bạn không đủ quyền để thực hiện chức năng này');
+                        }
+                        if (httpStatus === 401) {
+                            App.showErrorAlert('Vui lòng đăng nhập, tài khoản của bạn đã hết phiên làm việc');
+                        }
                     })
             }
         })
@@ -689,6 +714,7 @@
                     console.log(jqXHR);
                 })
     }
+
     page.commands.onchangeProvince = (provinceId, districtElement, wardElement) => {
         page.commands.getALlDistricts(provinceId, districtElement).then(() => {
             const districtId = districtElement.val();
